fix padding bug on mobile

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a {
 @media (max-width: 768px) {
   .container {
     max-width: 100%;
-    padding: 3em 1em;
+    padding: 3em 1em 0 1em;
     margin: 0;
   }
 
